fixed shaders part error and improved code